adjusted styles for labels for corrected spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -141,6 +141,7 @@ label{
   width: 250px;
   text-align: center;
   margin-left: -50px;
+  padding: 0.2rem;
 }
 form > h1 {
  	font-size: 2rem;
